After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670402 - CRITICAL warning when ClutterDragAction has threshold > 0
CRITICAL warning when ClutterDragAction has threshold > 0
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterAction
unspecified
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-02-19 16:58 UTC by Stefano Facchini
Modified: 2012-02-23 10:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
drag-action: Use the motion event when passing the drag threshold (945 bytes, patch)
2012-02-21 11:16 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Stefano Facchini 2012-02-19 16:58:22 UTC
When the threshold is > 0, a critical warning is emitted when starting the drag:

Clutter-CRITICAL **: clutter_event_get_device: assertion `event != NULL' failed
Comment 1 Emmanuele Bassi (:ebassi) 2012-02-21 11:16:48 UTC
Created attachment 208107 [details] [review]
drag-action: Use the motion event when passing the drag threshold

This avoids a critical warning, but it also makes the dragging more
fluid in case of threshold crossing.
Comment 2 Emmanuele Bassi (:ebassi) 2012-02-23 10:54:12 UTC
Attachment 208107 [details] pushed as 1e3debb - drag-action: Use the motion event when passing the drag threshold